# 476-project

./: CMakeLists.txt  FindGfxLibs.cmake
include/: Components.h  Config.h  Model.h
include/Systems/: HighPerformanceParticleSystem.h  InputSystem.h  ModelSystem.h  ParticleSystem.h  Random.h  RenderSystem.h  Systems.h
resources/shaders/: high_perf_part_frag.glsl  high_perf_part_vert.glsl  simple_frag.glsl  simple_vert.glsl
src/: Model.cpp  WindowManager.cpp  main.cpp
src/Systems/: HighPerformanceParticleSystem.cpp  InputSystem.cpp  ModelSystem.cpp  ParticleSystem.cpp  Random.cpp  RenderSystem.cpp
